# bge_onnx_demo

./: .gitignore  BertTokenizer.cpp  BertTokenizer.h  BgeCore.cpp  BgeCore.h  BgeCoreC.h  CMakeLists.txt  README.md  c_api_demo.cpp  compare_tokenizer.py  main.cpp
Xenova-bge-large-zh-v1.5/: README.md  config.json  quantize_config.json
